<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="message"
            type="com.rationalowl.umsdemo.domain.Message" />

        <variable
            name="dateFormat"
            type="java.text.SimpleDateFormat" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp">

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_sent" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{dateFormat.format(message.sentAt)}" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_received" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{dateFormat.format(message.receivedAt)}" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talk_sent" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{message.alimTalkSentAt != null ? dateFormat.format(message.alimTalkSentAt) : @string/not_sent}" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sent" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{message.munjaSentAt != null ? dateFormat.format(message.munjaSentAt) + ` (` + message.munjaType + `)` : @string/not_sent}" />

    </LinearLayout>
</layout>