<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rationalowl.umsdemo.representation.viewModel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppTheme.Accent"
        tools:context=".representation.ui.account.SignUpInputPhoneFragment">

        <TextView
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/input_phone_number"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_country"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="none"
            app:suffixText="@{`+` + viewModel.phoneCountryCode}">

            <AutoCompleteTextView
                android:id="@+id/textview_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="@string/country_korea" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/phone_number"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:text="@={viewModel.phoneNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_send_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="8dp"
                android:enabled="@{viewModel.phoneNumber.length() > 0}"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>
</layout>