<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rationalowl.umsdemo.representation.viewModel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        tools:context=".representation.ui.account.SignUpAgreementsFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/service_terms"
            android:textAlignment="textStart" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_terms"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical" />

                <CheckBox
                    android:id="@+id/checkbox_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={viewModel.termsAgreement}"
                    android:text="@string/agree"
                    android:theme="@style/ThemeOverlay.AppTheme.Accent" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/privacy_policy"
            android:textAlignment="textStart" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical" />

                <CheckBox
                    android:id="@+id/checkbox_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:checked="@={viewModel.privacyPolicyAgreement}"
                    android:text="@string/agree"
                    android:theme="@style/ThemeOverlay.AppTheme.Accent" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            android:enabled="@{viewModel.termsAgreement &amp;&amp; viewModel.privacyPolicyAgreement}"
            android:text="@string/next"
            android:theme="@style/ThemeOverlay.AppTheme.Button.ElevatedButton.Accent" />
    </LinearLayout>
</layout>