<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rationalowl.umsdemo.domain.MessageType" />

        <variable
            name="dateFormat"
            type="java.text.SimpleDateFormat" />

        <variable
            name="message"
            type="com.rationalowl.umsdemo.domain.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".representation.ui.message.MessageViewActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.RationalOwlUMSDemo.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.RationalOwlUMSDemo.PopupOverlay"
                app:title="@{dateFormat.format(message.sentAt)}" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@{message.type == MessageType.EMERGENCY ? @drawable/notification_orange : @drawable/notification_green}" />

                <TextView
                    android:id="@+id/textview_title"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@{message.type == MessageType.EMERGENCY ? @string/message_emergency_title(message.title) : @string/message_normal_title(message.title)}"
                    android:textColor="?attr/colorOnSurface" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="12dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/card_background">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textview_content"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{message.body}"
                            android:textColor="?attr/colorOnSurfaceVariant"
                            android:textIsSelectable="true" />

                        <ImageView
                            android:id="@+id/imageview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="12dp"
                            android:adjustViewBounds="true"
                            android:visibility="gone" />
                    </LinearLayout>
                </ScrollView>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_copy"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                app:icon="@drawable/ic_baseline_content_copy_24"
                app:iconGravity="top" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_delete"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:icon="@drawable/ic_baseline_delete_24"
                app:iconGravity="top" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_info"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                app:icon="@drawable/ic_baseline_info_24"
                app:iconGravity="top" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</layout>